--- a/css/index.css
+++ b/css/index.css
@@ -564,3 +564,84 @@
     color: #828285;
     line-height: 30px;
 }
+
+.documents-top{
+    background-image: url(../img/index/documents/fon-blue-top.webp);
+    padding-bottom: 100px;
+    background-size: cover;
+    background-position: center;
+}
+
+.documents{
+    background-color: #225bc1;
+}
+
+.documents-text{
+    font-family: "Rubik", sans-serif;
+    font-size: 34px;
+    font-weight: 600;
+    color: white;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.documents-block{
+    display: grid;
+}
+
+.documents-card{
+    display: grid;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.documents-card-img{
+    width: 70px;
+}
+
+.documents-card-text{
+    font-family: "Fira Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+    line-height: 30px;
+    text-decoration: none;
+    padding: 10px;
+}
+
+@media (min-width: 768px){
+    .documents-block{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .documents-card-img{
+        width: 100px;
+    }
+}
+
+.contact-form{
+    background-color: #F8F8F8;
+    padding: 90px 24px;
+}
+
+.contact-form-block{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form-text > h2{
+    font-family: "Rubik", sans-serif;
+    font-size: 34px;
+    font-weight: 600;
+    color: #225bc1;
+    padding-bottom: 20px;
+}
+
+.contact-form-text > h3{
+    font-family: "Fira Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    color: #828285;
+    line-height: 30px;
+    padding-bottom: 30px;
+}
+
