--- a/css/about.css
+++ b/css/about.css
@@ -83,6 +83,7 @@
 
 .zubdenys{
     background-image: url(../img/about/denyszub.JPG);
+    background-position-y: center;
 }
 
 .nataliamoroz{
@@ -123,16 +124,40 @@
     background-image: url(../img/about/mariamuranets.jpg);
 }
 
+@media (min-width: 400px){
+    .about-cards-photo{
+        height: 400px;
+    }
+    .zubdenys{
+        background-position-y: 20%;
+    }
+    .zgyrskaolga{
+        background-position-y: 35%;
+    }
+    
+}
+@media (min-width: 500px){
+    .about-cards-photo{
+        height: 480px;
+        width: 440px;
+    }
+    .zgyrskaolga{
+        background-position-y: center;
+    }
+}
+
+
 
 @media (min-width: 768px){
     .about-block{
         grid-template-columns: 1fr 1fr;
     }
-    .about-cards{
-        padding: 0 15px;
-    }
     .about-cards-photo{
         height: 354px;
+        width: 100%;
+    }
+    .about-cards{
+        padding: 0 15px;
     }
     .zubdenys{
         background-position-y: 20%;
@@ -140,6 +165,7 @@
     .about-spase{
         display: none;
     }
+
 }
 
 @media (min-width: 992px){
@@ -154,8 +180,8 @@
     }
 }
 
-@media (min-width: 1150px){
+@media (min-width: 1100px){
     .about-cards-photo{
-        height: 364px;
+        height: 374px;
     }
 }
