--- a/css/about.css
+++ b/css/about.css
@@ -33,7 +33,7 @@
 }
 
 .about-cards-photo{
-    width: 100%;
+    width: 260px;
     height: 290px;
     background-size: cover;
     border-radius: 10px;
@@ -126,6 +126,7 @@
 
 @media (min-width: 400px){
     .about-cards-photo{
+        width: 100%;
         height: 400px;
     }
     .zubdenys{
