--- a/css/index.css
+++ b/css/index.css
@@ -469,6 +469,7 @@
     font-weight: 500;
     color: white;
     margin: -40px 10px 0 10px;
+    z-index: 50;
 }
 
 .projects-button{
@@ -669,7 +670,7 @@
 
 .form > input{
     width: 50%;
-    margin: 18px auto;
+    margin: 20px auto;
     padding: 16px 24px;
     border-radius: 10px;
     background-color: #F8F8F8;
@@ -737,4 +738,20 @@
     }
 }
 
+#myBtn {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: transparent ; 
+    cursor: pointer; 
+    padding: 15px; 
+    border-radius: 10px; 
+}
 
+#myBtn:hover {
+    background-color: #FBFF3C; 
+}
