--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -247,6 +247,10 @@ footer{
     padding: 15px;
 }
 
+.created-by > img {
+    width: 150px;
+}
+
 @media (min-width: 768px){
     .footer-follow-contact{
         grid-template-columns: 1fr 3fr;
