--- a/css/index.css
+++ b/css/index.css
@@ -776,6 +776,28 @@
     top:1px;
 }
 
+.form {
+	position: relative;
+}
+.form::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(51, 51, 51, 0.3) url("/img/loading.gif") center / 50px no-repeat;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.5s ease 0s;
+    border-radius: 10px;
+}
+.form._sending::after {
+	opacity: 1;
+	visibility: visible;
+}
+
+
 @media (min-width: 768px){
     .contact-form-block{
         grid-template-columns: 1fr 1fr;
