--- a/css/index.css
+++ b/css/index.css
@@ -706,6 +706,13 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 10px 10px 20px rgba(0,0,0,0.1);
+    padding: 10px;
+}
+
+.contact-form-card > iframe{
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .contact-form-text-card{
