--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -2,6 +2,22 @@
     margin: 0;
     scroll-behavior: smooth;
 }
+*,
+*::before,
+*::after {
+	padding: 0;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
+}
+
+ul,
+li {
+	list-style: none;
+}
+._lock{
+    overflow: hidden;
+}
 
 .container{
     max-width: 1200px;
@@ -9,7 +25,10 @@
 }
 
 .header-block{
-    padding: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
 }
 .logo-header{
     width: 232px;
@@ -21,14 +40,14 @@
     transition: 0.3s;
 }
 
-.nav-header{
+.menu__list{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 30px auto;
 }
 
-.nav-header > a{
+.menu__list > li > a{
     padding: 10px;
     text-decoration: none;
     color: rgb(48, 48, 49);
@@ -36,7 +55,7 @@
     font-weight: 600;
 }
 
-.nav-header > a:hover{
+.menu__list > li > a:hover{
     color:#FBFF3C;
     transition: 0.3s;
 }
@@ -60,15 +79,114 @@
    transition: 0.3s;
 
 }
- 
+
+@media (max-width: 992px){
+    .menu__list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 30px auto;
+        justify-content: center;
+    }
+    
+    .menu__list > li,div{
+        padding: 10px;
+    }
+    
+    .menu__link{
+        padding: 10px;
+        text-decoration: none;
+        color: rgb(48, 48, 49);
+        font-family: "Fira Sans", sans-serif;
+        font-weight: 600;
+    }
+    
+    .menu__link:hover{
+        color:#FBFF3C;
+        transition: 0.3s;
+    }
+    .menu__icon {
+        z-index: 5;
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 18px;
+        cursor: pointer;
+    }
+    .menu__icon > span,
+    .menu__icon::before,
+    .menu__icon::after {
+        left: 0;
+        position: absolute;
+        height: 10%;
+        width: 100%;
+        transition: all 0.3s ease 0s;
+        background-color: rgb(48, 48, 49);
+    }
+    .menu__icon::before,
+    .menu__icon::after {
+        content: "";
+    }
+    .menu__icon::before {
+        top: 0;
+    }
+    .menu__icon::after {
+        bottom: 0;
+    }
+    .menu__icon span {
+        top: 50%;
+        transform: scale(1) translate(0px, -50%);
+    }
+    
+    .menu__icon._active span {
+        transform: scale(0) translate(0px, -50%);
+    }
+    .menu__icon._active::before {
+        top: 50%;
+        transform: rotate(-45deg) translate(0px, -50%);
+    }
+    .menu__icon._active::after {
+        bottom: 50%;
+        transform: rotate(45deg) translate(0px, 50%);
+    }
+    
+    .nav-header {
+        position: fixed;
+        top: 140px;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(255, 255, 255);
+        padding: 10px;
+        transition: all 0.3s ease 0s;
+        overflow: auto;
+    }
+    .nav-header._active {
+        left: 0;
+    }
+    
+    .nav-header::before {
+        content: "";
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background-color: transparent;
+        z-index: 2;
+    }
+}
 @media (min-width: 992px){
+    .menu__icon{
+        display: none;
+    }
     .header-block{
         display: grid;
-        grid-template-columns: 1.4fr 1.6fr 0.6fr;
+        grid-template-columns: 1fr 2fr;
         
     }
-    .nav-header{
+    .menu__list{
         flex-direction: row;
+        align-self: center;
     }
     .follow-header{
         margin: auto;
