--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -112,6 +112,7 @@ li {
         width: 30px;
         height: 18px;
         cursor: pointer;
+        margin-right: 20px;
     }
     .menu__icon > span,
     .menu__icon::before,
