--- a/css/about.css
+++ b/css/about.css
@@ -59,8 +59,14 @@
 
 .about-card-follows > a > img{
     width: 30px;
-    padding: 10px 8px 10px;
-    border-radius: 30%;
+    margin: 10px 8px 10px;
+    border-radius: 20%;
+}
+
+.about-card-follows > a > img:hover{
+    color: rgba(255, 255, 255, 0.3);
+    opacity: 0.8;
+    transition: 0.3s; 
 }
 
 .about-cards > a{
