--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -62,6 +62,7 @@ li {
 
 .follow-header{
     text-align: center;
+    padding-bottom: 100px;
 }
 
 .follow-header > a{
@@ -153,7 +154,7 @@ li {
     
     .nav-header {
         position: fixed;
-        top: 140px;
+        top: 110px;
         left: -100%;
         width: 100%;
         height: 100%;
@@ -161,6 +162,7 @@ li {
         padding: 10px;
         transition: all 0.3s ease 0s;
         overflow: auto;
+        z-index: 3;
     }
     .nav-header._active {
         left: 0;
@@ -192,6 +194,7 @@ li {
     .follow-header{
         margin: auto;
         padding: 30px auto;
+        padding-bottom: 0;
     }
     .logo-header{
         width: 286px;
