--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,7 @@
     position: relative;
     top: 3px;
     left: 2px;
+    z-index: 0;
 }
 
 
@@ -658,7 +659,7 @@
 }
 
 .contact-form{
-    padding: 90px 25px;
+    padding: 40px 5px;
     background-color: #F8F8F8;
 }
 
@@ -690,17 +691,11 @@
 }
 
 .contact-form-card{
-    margin: 10px 30px;
+    margin: 10px 15px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 10px 10px 20px rgba(0,0,0,0.1);
     padding: 10px;
-}
-
-.contact-form-card > iframe{
-    width: 100%;
-    height: 100%;
-    border: 0;
 }
 
 .contact-form-text-card{
@@ -714,7 +709,7 @@
 }
 
 .form > input{
-    width: 50%;
+    width: 90%;
     margin: 20px auto;
     padding: 16px 24px;
     border-radius: 10px;
@@ -725,7 +720,7 @@
 }
 
 .form-message{
-    width: 50%;
+    width: 90%;
     min-height: 150px;
     margin-top: 12px;
     margin-bottom: 18px;
@@ -802,6 +797,10 @@
 @media (min-width: 992px){
     .form > input{
         padding: 16px ;
+        width: 70%;
+    }
+    .form-message{
+        width: 70%;
     }
 }
 
