--- a/css/index-carrousel.css
+++ b/css/index-carrousel.css
@@ -54,7 +54,7 @@
     padding: 0;
     list-style-type: none;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
   }
   
   .ant-carousel-element {
@@ -63,8 +63,8 @@
   }
 
   .ant-carousel-element > img{
-      width: 242px;
-    height: 187px;
+      width: 100%;
+    height: 100%;
       padding: 0 15px;
       border-radius: 10%;
   }
@@ -80,9 +80,6 @@
     .ant-carousel-element > img{
         width: 360px;
         height: 280px;
-    }
-    div.ant-carousel-arrow-right{
-        right: -1px;
     }
   }
   
@@ -109,6 +106,15 @@
     top: 40%;
     display: block;
     background: url(/img/index/gallery/ant-arrow-right.png)  no-repeat;
+  }
+
+  @media (min-width: 992px) {
+    div.ant-carousel-arrow-right{
+      right: 0;
+    }
+    div.ant-carousel-arrow-left{
+      left: 0;
+    }
   }
 
   
