--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@
     background-size: cover;
     background-position: center;
     background-position-y: 70%;
+    z-index: -1;
 }
 
 .main-photo-text{
