--- a/css/index.css
+++ b/css/index.css
@@ -62,12 +62,12 @@
    
 }
 
-.main-button > i{
+/* .main-button > i{
     position: relative;
     top: 3px;
     left: 2px;
     z-index: 0;
-}
+} */
 
 
 
