--- a/css/index.css
+++ b/css/index.css
@@ -10,13 +10,13 @@
 }
 
 .main-photo{
-    /* background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/index/main-ngo-dim.jpg); */
-    background: url(../img/index/main-ngo-dim.jpg);
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/index/main-ngo-dim.jpg);
+    /* background: url(../img/index/main-ngo-dim.jpg); */
     height: 610px;
     background-size: cover;
     background-position: center;
     background-position-y: 70%;
-    z-index: -1;
+    
 }
 
 .main-photo-text{
