--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 
 .main-photo{
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/index/main-ngo-dim.jpg);
-    /* background: url(../img/index/main-ngo-dim.jpg); */
+    /* background-image: url(../img/index/main-ngo-dim.jpg); */
     height: 610px;
     background-size: cover;
     background-position: center;
@@ -62,12 +62,12 @@
    
 }
 
-/* .main-button > i{
+.main-button > i{
     position: relative;
     top: 3px;
     left: 2px;
     z-index: 0;
-} */
+}
 
 
 
