--- a/css/index.css
+++ b/css/index.css
@@ -10,13 +10,12 @@
 }
 
 .main-photo{
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/header/logo-header.png);
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/index/main-ngo-dim.avif);
     /* background-image: url(../img/index/main-ngo-dim.jpg); */
     height: 610px;
     background-size: cover;
     background-position: center;
     background-position-y: 70%;
-    
 }
 
 .main-photo-text{
