--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,6 @@
     height: 610px;
     background-size: cover;
     background-position: center;
-    /* background-position-y: 70%; */
 }
 
 .main-photo-text{
@@ -79,7 +78,8 @@
 @media (min-width: 992px){
     .main-photo{
         height: 820px;
-    }
+        background-position-y: 65%;
+        }
     .main-photo-text{
         padding-top: 350px;
     }
